This file documents the revision history for the Monitoring Webinterface Thruk.


next:
          - add custom action menu
          - livestatus performance improvements
          - updated jquery to 1.11.1
          - added new configuration setting: max_process_memory
          - Reporting:
            - support url reports from external urls
          - Panorama View:
            - added show details/refresh links to icons
            - add 'center' position option for labels
            - changeable icon filter types
            - fixed memory leak in generic url panel
            - fixed problem with stopped timers after import
            - reload every x hours to prevent noncatchable memory leaks
            - fixed linking public dashboards
          - Bug Fixes
            - fixed problem with timeperiods in logcache database
            - fixed show_custom_vars with wildcards
            - fixed adding dummy function in business processes
            - fixed startup page in safari browser

1.84-6   Wed Aug  6 11:24:12 CEST 2014
          - Panorama View:
            - support availability results in labels and speedometer

1.84-5   Wed Jul 16 13:30:05 CEST 2014
          - Reports
            - added cancel button for running reports
            - added progres bar for running reports
          - Panorama View:
            - added -or filter to all filter panels
            - added optional min/max values for speedometer
            - added invert switch for speedometer
            - background images can now be scaled
            - background images can have an offset
            - images and icons can be scaled
          - Bug Fixes
            - fixed pnp source not selectable anymore after revisiting panel settings
            - fixed applying panel source
            - fixed using multiple panorama custom filter

1.84-4   Mon Jun 23 17:44:32 CEST 2014